Added yolo tutorial

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -49,7 +49,8 @@ nav:
     - 11. RQT, RViz, and TF Debugging: 11_rqt_rviz_tf_debugging.md
     - 12. Custom Interfaces and Lifecycle: 12_custom_interfaces_and_lifecycle.md
     - 13. Multi‑Robot and Networking: 13_multi_robot_and_networking.md
-
+  - Examples:
+      - YOLO: docs/examples/yolo.md
 site_url: https://ambarishgk.github.io/ROS2-Tutorial/
 repo_url: https://github.com/ambarishgk/ROS2-Tutorial
 edit_uri: blob/main/docs/
