--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -52,6 +52,7 @@ nav:
   - Examples:
       - YOLO: yolo_example.md
       - MMdetection3d: README_mmdetection3d.md
+      - ROS2 and MMdetection3d: README_ros2_mmdetect_container.md
 site_url: https://ambarishgk.github.io/ROS2-Tutorial/
 repo_url: https://github.com/ambarishgk/ROS2-Tutorial
 edit_uri: blob/main/docs/
