--- a/image_demo/package.xml
+++ b/image_demo/package.xml
@@ -15,4 +15,8 @@
   <export>
     <build_type>ament_python</build_type>
   </export>
+  <exec_depend>rclpy</exec_depend>
+  <exec_depend>sensor_msgs</exec_depend>
+  <exec_depend>cv_bridge</exec_depend>
+  <exec_depend>vision_msgs</exec_depend>
 </package>
