--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -54,6 +54,7 @@ nav:
       - MMdetection3d: README_mmdetection3d.md
       - ROS2 and MMdetection3d: README_ros2_mmdetect_container.md
       - Vision Suite (YOLO + mmdet3d): vision_suite_readme.md
+      - Jetson-Orin-Nao-MMdetection3d: jetson_mmdet3d_suite.md
 site_url: https://ambarishgk.github.io/ROS2-Tutorial/
 repo_url: https://github.com/ambarishgk/ROS2-Tutorial
 edit_uri: blob/main/docs/
