--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -55,7 +55,7 @@ nav:
       - ROS2 and MMdetection3d: README_ros2_mmdetect_container.md
       - Vision Suite (YOLO + mmdet3d): vision_suite_readme.md
       - Jetson-Orin-Nano-MMdetection3d: jetson_mmdet3d_suite.md
-      - Jetson-ROS2-MMdetection3d-YOLO-Vision-Suite: jetson_mmdet3d_suite.md
+      - Jetson-ROS2-MMdetection3d-YOLO-Vision-Suite: ROS2_Jetson_Vision_Suite_README.md
 site_url: https://ambarishgk.github.io/ROS2-Tutorial/
 repo_url: https://github.com/ambarishgk/ROS2-Tutorial
 edit_uri: blob/main/docs/
